2012-09-14  Peter Beverloo  <peter@chromium.org>

        [Chromium] Build fix for DumpRenderTree following r128628
        https://bugs.webkit.org/show_bug.cgi?id=96808

        Reviewed by Tony Chang.

        When building DumpRenderTree from the Chromium project, a compile error
        shows up because including the header ForwardIOStreamsAndroid.h cannot
        be located. TestWebKitAPI does this correctly.

        * DumpRenderTree/DumpRenderTree.gyp/DumpRenderTree.gyp:

2012-09-14  Dana Jansens  <danakj@chromium.org>

        Change cc-bugs@google.com watchlist to cc-bugs@chromium.org
        https://bugs.webkit.org/show_bug.cgi?id=96805

        Reviewed by Dirk Pranke.

        * Scripts/webkitpy/common/config/committers.py:
        * Scripts/webkitpy/common/config/watchlist:

2012-09-14  Peter Beverloo  <peter@chromium.org>

        [Chromium] Support the --{in,out,err}-fifo arguments on TestWebKitAPI and webkit_unit_tests
        https://bugs.webkit.org/show_bug.cgi?id=96687

        Reviewed by Tony Chang.

        Android's DumpRenderTree currently supports these arguments, implemented
        as part of TestShellAndroid:
        http://trac.webkit.org/browser/trunk/Tools/DumpRenderTree/chromium/TestShellAndroid.cpp?rev=128496

        They're used by the layout test runner to get the STDOUT and STDERR while
        a layout test run is in process, which is a safer alternative to parsing
        all the logcat output manually. The implementation can be seen here:
        http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/layout_tests/port/chromium_android.py?rev=128496#L590

        This patch generalizes parsing of and applying the effects of these arguments
        so that they can be used for TestWebKitAPI and webkit_unit_tests as well.
        After this patch, this will make it possible to pull out the output-reading
        code from Android's layout test port and generalize it so it can be re-used