@@ -1,3 +1,14 @@
+2012-09-14  Alexey Proskuryakov  <ap@apple.com>
+
+        [WK2] webarchive/loading/javascript-url-iframe-crash.html fails
+        https://bugs.webkit.org/show_bug.cgi?id=96817
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        * WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
+        (WTR::InjectedBundlePage::didFailProvisionalLoadWithErrorForFrame): This callback
+        got overlooked when adding logging elsewhere.
+
 2012-09-14  Peter Beverloo  <peter@chromium.org>
 
         [Chromium] Build fix for DumpRenderTree following r128628
